--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar">
+    <nav id="navbar">
         <div class="logo">
-            <img src="logo.png" alt="logo" class="image-logo">
+            <img src="images/logo.png" alt="logo" class="image-logo">
         </div>
             <ul class="nav-items">
                 <li class="nav-item"><a href="#">About</a></li>
@@ -36,7 +36,7 @@
     </div>
 
     <div class="right">
-        <img src="image-right.png" alt="image" class="main-image">
+        <img src="images/image-right.png" alt="image" class="main-image">
     </div>
     </main>
 
@@ -46,44 +46,44 @@
     </div>
 
     <!-- Projects -->
-    <div class="projects">
+    <div id="projects">
         <div class="project">
-            <img src="one.jpg" alt="project1" class="project-img">
+            <img src="images/one.jpg" alt="project1" class="project-img">
            <div class="link">
             <a href="">Codepen</a>
             <a href="">Github</a>
         </div>
         </div>
         <div class="project">
-            <img src="two.jpg" alt="project1" class="project-img">
+            <img src="images/two.jpg" alt="project1" class="project-img">
             <div class="link">
                 <a href="">Codepen</a>
                 <a href="">Github</a>
             </div>
         </div>
         <div class="project">
-            <img src="three.jpg" alt="project1" class="project-img">
+            <img src="images/three.jpg" alt="project1" class="project-img">
             <div class="link">
                 <a href="">Codepen</a>
                 <a href="">Github</a>
             </div>
         </div>
         <div class="project">
-            <img src="four.jpg" alt="project1" class="project-img">
+            <img src="images/four.jpg" alt="project1" class="project-img">
             <div class="link">
                 <a href="">Codepen</a>
                 <a href="">Github</a>
             </div>
         </div>
         <div class="project">
-            <img src="five.jpg" alt="project1" class="project-img">
+            <img src="images/five.jpg" alt="project1" class="project-img">
             <div class="link">
                 <a href="">Codepen</a>
                 <a href="">Github</a>
             </div>
         </div>
         <div class="project">
-            <img src="six.jpg" alt="project1" class="project-img">
+            <img src="images/six.jpg" alt="project1" class="project-img">
             <div class="link">
                 <a href="">Codepen</a>
                 <a href="">Github</a>
