added class with a name project-tile

--- a/index.html
+++ b/index.html
@@ -47,42 +47,42 @@
 
     <!-- Projects -->
     <div id="projects">
-        <div class="project">
+        <div class="project-tile">
             <img src="images/one.jpg" alt="project1" class="project-img">
            <div class="link">
             <a href="">Codepen</a>
             <a href="">Github</a>
         </div>
         </div>
-        <div class="project">
+        <div class="project-tile">
             <img src="images/two.jpg" alt="project1" class="project-img">
             <div class="link">
                 <a href="">Codepen</a>
                 <a href="">Github</a>
             </div>
         </div>
-        <div class="project">
+        <div class="project-tile">
             <img src="images/three.jpg" alt="project1" class="project-img">
             <div class="link">
                 <a href="">Codepen</a>
                 <a href="">Github</a>
             </div>
         </div>
-        <div class="project">
+        <div class="project-tile">
             <img src="images/four.jpg" alt="project1" class="project-img">
             <div class="link">
                 <a href="">Codepen</a>
                 <a href="">Github</a>
             </div>
         </div>
-        <div class="project">
+        <div class="project-tile">
             <img src="images/five.jpg" alt="project1" class="project-img">
             <div class="link">
                 <a href="">Codepen</a>
                 <a href="">Github</a>
             </div>
         </div>
-        <div class="project">
+        <div class="project-tile">
             <img src="images/six.jpg" alt="project1" class="project-img">
             <div class="link">
                 <a href="">Codepen</a>
