--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <img src="images/logo.png" alt="logo" class="image-logo">
         </div>
             <ul class="nav-items">
-                <li class="nav-item"><a href="#">About</a></li>
-                <li class="nav-item"><a href="#">My projects</a></li>
-                <li class="nav-item"><a href="#">Contact</a></li>
+                <li class="nav-item"><a href="#about">About</a></li>
+                <li class="nav-item"><a href="#projects">My projects</a></li>
+                <li class="nav-item"><a href="#contact">Contact</a></li>
             </ul>
         </nav>  
     </header>
@@ -41,7 +41,7 @@
     </main>
 
     <!-- About -->
-    <div class="about">
+    <div id="about">
 
     </div>
 
@@ -92,7 +92,7 @@
     </div>
 
     <!-- contact -->
-    <div class="contact">
+    <div id="contact">
 
     </div>
 </body>
