social links added

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     </div>
 
     <div class="social-icons">
-        <i class="fa-brands fa-facebook fa-2x"></i>            
-        <i class="fa-brands fa-instagram fa-2x"></i>
-        <i class="fa-brands fa-github fa-2x"></i>
-        <i class="fa-brands fa-twitter fa-2x"></i>
+        <a href="https://www.facebook.com/masa.orel" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a>            
+        <a href="https://www.instagram.com/toller_and_malinois_life/" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
+        <a id="profile-link" href="https://github.com/Mashha" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/masha-orel/" target="_blank"><i class="fa-brands fa-linkedin fa-2x"></i></a>
     </div>
 
     <div class="right">
