new links in projects

--- a/index.html
+++ b/index.html
@@ -50,29 +50,29 @@
         <div class="project-tile">
             <img src="images/one.jpg" alt="project1" class="project-img">
            <div class="link">
-            <a href="">Codepen</a>
+            <a href="https://codepen.io/pimu_lab/full/BamKEMB" target="_blank">Codepen</a>
             <a href="">Github</a>
         </div>
         </div>
         <div class="project-tile">
             <img src="images/two.jpg" alt="project1" class="project-img">
             <div class="link">
-                <a href="">Codepen</a>
-                <a href="">Github</a>
+                <a href="https://codepen.io/pimu_lab/full/MWObYwL" target="_blank">Codepen</a>
+                <a href="https://github.com/Mashha/survey_form" target="_blank">Github</a>
             </div>
         </div>
         <div class="project-tile">
             <img src="images/three.jpg" alt="project1" class="project-img">
             <div class="link">
-                <a href="">Codepen</a>
-                <a href="">Github</a>
+                <a href="https://codepen.io/pimu_lab/pen/GRONgBx" target="_blank">Codepen</a>
+                <a href="https://github.com/Mashha/tribute_page2" target="_blank">Github</a>
             </div>
         </div>
         <div class="project-tile">
             <img src="images/four.jpg" alt="project1" class="project-img">
             <div class="link">
-                <a href="">Codepen</a>
-                <a href="">Github</a>
+                <a href="https://codepen.io/pimu_lab/pen/zYPjxpQ" target="_blank">Codepen</a>
+                <a href="https://github.com/Mashha/product_page" target="_blank">Github</a>
             </div>
         </div>
         <div class="project-tile">
