added more links to projects

--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
         <div class="project-tile">
             <img src="images/five.jpg" alt="project1" class="project-img">
             <div class="link">
-                <a href="">Codepen</a>
-                <a href="">Github</a>
+                <a href="https://codepen.io/pimu_lab/pen/zYPZvMa" target="_blank">Codepen</a>
+                <a href="https://github.com/Mashha/doc_page" target="_blank">Github</a>
             </div>
         </div>
         <div class="project-tile">
             <img src="images/six.jpg" alt="project1" class="project-img">
             <div class="link">
-                <a href="">Codepen</a>
-                <a href="">Github</a>
+                <a href="https://codepen.io/pimu_lab/pen/abVavYp" target="_blank">Codepen</a>
+                <a href="https://github.com/Mashha/project-1-50" target="_blank">Github</a>
             </div>
         </div>
     </div>
