last links added to projects

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <img src="images/one.jpg" alt="project1" class="project-img">
            <div class="link">
             <a href="https://codepen.io/pimu_lab/full/BamKEMB" target="_blank">Codepen</a>
-            <a href="">Github</a>
+            <a href="https://github.com/Mashha/product_page1" target="_blank">Github</a>
         </div>
         </div>
         <div class="project-tile">
